--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,13 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": "./src",
+    "paths": {
+      "@services/*": ["services/*"],
+      "@http/*": ["http/*"],
+      "@database/*": ["database/*"],
+      "@shared/*": ["shared/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
