--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.5.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
